@@ -1,3 +1,9 @@
+
+
+2018-11-28 Franz Holzinger <franz@ttproducts.de>
+
+    * getLanguageService use $GLOBALS["LANG"] in the front end only if a backend user has logged in.
+
 2018-11-27 Franz Holzinger <franz@ttproducts.de>
 
     * replace manual.sxw by manual.odt
